--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
@@ -36,7 +37,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "author": "",
   "license": "ISC",
   "homepage": "https://assqr.github.io/as-sqr-portfolio/"
