--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
+    "react-modal-image": "^2.5.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
